add one new project

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       </div> -->
       <div class="col-right">
         <h1 class="section-title">About Me</h1>
-        <h2>Software Engineer (Self Proclaim)</h2>
-        <p>Hello! My name is David, and I am a software engineer from the Philippines with a strong interest in web
+        <h2>Software Developer</h2>
+        <p>Hello! My name is David, and I am a software developer from the Philippines with a strong interest in web
           development. My long-term goal is to learn how to develop both web and mobile applications. Now I'm taking it
           one step at a time.
           <br><br>
@@ -98,9 +98,6 @@
           </div>
           <div class="social-item">
             <img src="https://img.icons8.com/plasticine/100/000000/react.png" />
-          </div>
-          <div class="social-item">
-            <img src="https://img.icons8.com/color/48/000000/c-sharp-logo-2.png" />
           </div>
         </div>
         <a href="./public/resume/resume.pdf" download target="_blank" type="button" class="cta">DOWNLOAD RESUME</a>
@@ -149,36 +146,12 @@
         <div class="project-item" data-aos="flip-right">
           <div class="project-info">
             <h2>Featured Project</h2>
-            <h1>Chatter</h1>
-            <p>A full-fledged Firebase Chat App with social authentication via Google and Facebook.
-            </p>
-            <br>
-            <h3>React &nbsp; Chat Engine &nbsp; Firebase</h3>
-            <div class="social-icon">
-              <div class="social-item">
-                <a href="https://github.com/dm-valdez/chatter"><img src="https://img.icons8.com/ios-glyphs/60/ffffff/github.png" /></a>
-              </div>
-              <div class="social-item">
-                <a href="https://chatterdmv.netlify.app/"><img src="https://img.icons8.com/material-outlined/60/ffffff/external-link.png" /></a>
-              </div>
-            </div>
-          </div>
-          <div class="project-img">
-            <img src="public/chatter.png" alt="img">
-          </div>
-        </div>
-        <!-- End of Project#2 -->
-
-        <!-- Start of Project#3 -->
-        <div class="project-item" data-aos="flip-left">
-          <div class="project-info">
-            <h2>Featured Project</h2>
             <h1>Crypto Search</h1>
             <p>Created a website which can search hundreds of crypto currency
               with the Coingecko API.
             </p>
             <br>
-            <h3>React &nbsp; Axios &nbsp; Coingecko API &nbsp; Styled Components </h3>
+            <h3>ReactJS &nbsp; Axios &nbsp; Coingecko API &nbsp; Styled-Components </h3>
             <div class="social-icon">
               <div class="social-item">
                 <a href="https://github.com/dm-valdez/crypto-api"><img src="https://img.icons8.com/ios-glyphs/60/ffffff/github.png" /></a>
@@ -192,9 +165,58 @@
             <img src="public/crypto.png" alt="img">
           </div>
         </div>
+        <!-- End of Project#2 -->
+
+        <!-- Start of Project#3 -->
+        <div class="project-item" data-aos="flip-left">
+          <div class="project-info">
+            <h2>Featured Project</h2>
+            <h1>Food Finder</h1>
+            <p>Created a website which can search for the recipes of thousands
+              of dishes with the EDAMAM API.
+            </p>
+            <br>
+            <h3>ReactJS &nbsp; Axios &nbsp; MaterialUI &nbsp; EDAMAM API </h3>
+            <div class="social-icon">
+              <div class="social-item">
+                <a href="https://github.com/dm-valdez/food-finder"><img src="https://img.icons8.com/ios-glyphs/60/ffffff/github.png" /></a>
+              </div>
+              <div class="social-item">
+                <a href="https://foodfinderdmv.netlify.app/"><img src="https://img.icons8.com/material-outlined/60/ffffff/external-link.png" /></a>
+              </div>
+            </div>
+          </div>
+          <div class="project-img">
+            <img src="public/food-finder.png" alt="img">
+          </div>
+        </div>
         <!-- End of Project#3 -->
 
         <!-- Start of Project#4 -->
+        <div class="project-item" data-aos="flip-right">
+          <div class="project-info">
+            <h2>Featured Project</h2>
+            <h1>Chatter</h1>
+            <p>A full-fledged Firebase Chat App with social authentication via Google and Facebook.
+            </p>
+            <br>
+            <h3>ReactJS &nbsp; Chat Engine &nbsp; Firebase</h3>
+            <div class="social-icon">
+              <div class="social-item">
+                <a href="https://github.com/dm-valdez/chatter"><img src="https://img.icons8.com/ios-glyphs/60/ffffff/github.png" /></a>
+              </div>
+              <div class="social-item">
+                <a href="https://chatterdmv.netlify.app/"><img src="https://img.icons8.com/material-outlined/60/ffffff/external-link.png" /></a>
+              </div>
+            </div>
+          </div>
+          <div class="project-img">
+            <img src="public/chatter.png" alt="img">
+          </div>
+        </div>
+        <!-- End of Project#4 -->
+
+        <!-- Start of Project#5 -->
         <div class="project-item" data-aos="flip-right">
           <div class="project-info">
             <h2>Featured Project</h2>
@@ -209,7 +231,7 @@
             <img src="public/mathalino.png" alt="img">
           </div>
         </div>
-        <!-- End of Project#4 -->
+        <!-- End of Project#5 -->
       </div>
     </div>
   </section>
@@ -238,9 +260,9 @@
         <div class="social-item">
           <a href="https://github.com/dm-valdez"><img src="https://img.icons8.com/ios-glyphs/100/4FBDBA/github.png" /></a>    
         </div>
-        <div class="social-item">
+        <!-- <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/ios/100/4FBDBA/linkedin.png" /></a>
-        </div>
+        </div> -->
       </div>
       <p>© David Valdez 2022</p><br>
     </div>
